# capsule-emit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  neutrality_scan.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: neutrality.yml  python.yml
capsule_emit/: __init__.py  approval.py  bilateral.py  cli.py  core.py  gate.py  ledger.py  manifest.py  server.py  verify.py  viewer.py
capsule_emit/adapters/: __init__.py  _base.py  adk.py  agentgateway.py  crewai.py  ext_mcp_pb2.py  hermes.py  langchain.py  mcp.py
capsule_emit/constraints/: __init__.py  apache.py
docs/: README.md  adapter-patterns.md  anatomy.md  anchor-reliability.md  chaining.md  concepts.md  context-hygiene.md  going-deeper.md  the-public-log-explained.md  whats-consequential.md  why-anchoring.md
docs/adapters/: README.md  adk.md  agentgateway.md  crewai.md  goose.md  hermes.md  langchain.md  mcp.md
docs/tutorials/: 01-your-first-capsule.md  02-confirming-and-chaining.md  03-reading-your-ledger.md  04-declaring-constraints.md  README.md
examples/: quickstart_demo.py
examples/a2a-ap2/: README.md  a2a_sandbox.py  agent-catalog-entry.json  run_example.py
examples/a2a-ap2/boundary-seal/: SHA256SUMS  agent_card.json  boundary_seal_output.json  boundary_seal_rules.md  negative_variant.json  seal_boundary_tuple.py  task_request.json
examples/a2a-ap2/boundary-seal/server/: README.md  rehearse_loopback.py  serve_boundary_agent.py
examples/aauth-capsule-interop/: README.md  demo.py  test_bilateral.py
examples/agentgateway-capsule/: config.yaml  demo.py
examples/agentgateway-capsule/evidence/: capsule.json  run-transcript.md
examples/amaury-receipt-pack/: .gitignore  README.md  generate.py  sample_ledger.jsonl
examples/amaury-receipt-pack/receipts/: README-receipts.md
examples/approval/: demo.py
examples/bilateral/: demo.py
examples/bilateral-ghost/: README.md  demo.py
examples/gar-capsule/: README.md  demo.py  sample-gar-block.json  sample-scitt-statement.json  seal_session_block.py  session-block-scitt-statement.json
examples/goose-capsule/: demo.py  server.py
examples/goose-capsule/evidence/: capsule.json  run-transcript.md
examples/mcp-capsule/: README.md  demo.py
examples/nanda-tax-audit/: demo.py  pyproject.toml
examples/nanda-tax-audit/nanda_tax_audit/: __init__.py  scenario.py
examples/nanda-tax-audit/scenarios/: tax_audit.yaml
examples/nanda-tax-audit/tests/: test_tax_audit.py
examples/nanda-trust-capsule/: demo.py  pyproject.toml
examples/nanda-trust-capsule/nanda_capsule_trust/: __init__.py  trust.py
examples/nanda-trust-capsule/scenarios/: receipt_reputation_capsule.yaml
examples/nanda-trust-capsule/tests/: test_capsule_emit_trust.py
examples/wicket/: demo.py
flows/write-po/: manifest.md
skills/openclaw/: SKILL.md  seal_server.py
tests/: test_adapters.py  test_adapters_stress.py  test_adk.py  test_agentgateway.py  test_approval.py  test_bilateral.py  test_flip_gate.py  test_gate.py  test_goose.py  test_interop.py  test_jcs_digest_consistency.py  test_ledger_view.py  test_mcp_capture.py  test_mcp_harden.py  test_precision_r4.py  test_producer_hardening.py  test_quickstart.py  test_viewer.py
