# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capsule-emit"
version = "0.1.0"
description = "One-call emit() for Agent Action Capsules — anchor on by default, ledger view CLI, thin framework adapters."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Action State Group" }]
keywords = ["scitt", "agent", "capsule", "verification", "transparency", "audit"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Development Status :: 3 - Alpha",
]
dependencies = ["agent-action-capsule>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.40"]
mcp = []

[project.scripts]
capsule-emit = "capsule_emit.cli:main"

[project.urls]
Homepage = "https://github.com/action-state-group/agent-action-capsule"
Source = "https://github.com/action-state-group/agent-action-capsule"

[tool.setuptools.packages.find]
where = ["."]
include = ["capsule_emit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
