# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capsule-emit"
version = "0.3.1"
description = "One-call emit() for Agent Action Capsules — anchor on by default, ledger view CLI, thin framework adapters."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Action State Group" }]
keywords = ["scitt", "agent", "capsule", "verification", "transparency", "audit"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Development Status :: 3 - Alpha",
]
dependencies = ["agent-action-capsule>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.40"]
mcp = ["mcp>=1.0"]
agentgateway = ["grpcio>=1.60", "protobuf>=5.0"]
hermes = []

[project.scripts]
capsule-emit = "capsule_emit.cli:main"
capsule-emit-server = "capsule_emit.server:main"
capsule-emit-agentgateway = "capsule_emit.adapters.agentgateway:main"

[project.urls]
Homepage = "https://github.com/action-state-group/capsule-emit"
Source = "https://github.com/action-state-group/capsule-emit"
Tracker = "https://github.com/action-state-group/capsule-emit/issues"
Specification = "https://github.com/action-state-group/agent-action-capsule"
Organization = "https://github.com/action-state-group"

[tool.setuptools.packages.find]
where = ["."]
include = ["capsule_emit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "mcp: tests that require the mcp package (FastMCP integration)",
]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
