# SPDX-License-Identifier: Apache-2.0
[project]
name = "nanda-tax-audit"
version = "0.1.0"
description = "Cook the books, get caught — NANDA Town tax audit sim with capsule-emit"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "capsule-emit>=0.1.1",
    "agent-action-capsule>=0.0.3",
    "nest-core>=0.1.4",
    "nest-plugins-reference>=0.1.1",
    "nest-scenarios>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanda_tax_audit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
