# SPDX-License-Identifier: Apache-2.0
[project]
name = "nanda-capsule-trust"
version = "0.1.0"
description = "capsule-emit Trust layer plugin for NANDA Town — sealed, anchored, collusion-resistant reputation"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "capsule-emit>=0.1.1",
    "agent-action-capsule>=0.0.3",
    "nest-core>=0.1.4",
    "nest-plugins-reference>=0.1.1",
    "cryptography>=41.0",
]

[project.entry-points."nest.plugins.trust"]
capsule_emit = "nanda_capsule_trust.trust:CapsuleEmitTrust"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanda_capsule_trust"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
